# rust_iot_book_examples

./: .env  Cargo.toml
migrations/2021-12-31-140206_book/: down.sql  up.sql
migrations/2022-01-07-065405_movies/: up.sql
migrations/2022-01-07-105408_students/: up.sql
src/: database.rs  handlers.rs  lib.rs  main.rs  model.rs  models.rs  schema.rs
