[package]
name = "practice_01"
version = "0.1.0"
authors = ["osama530 <osamaqamar93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.6.1" # web fram work 
router = "*"    # for iron routing abality
logger = "*"
env_logger = "*"
# rustc-serialize = "0.3"
chrono = {version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.73"